// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must be able to return all selected contentBlocks 1`] = `
{
  "key0": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "Alpha",
    "type": "unstyled",
  },
  "key1": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key1",
    "text": "Beta",
    "type": "unstyled",
  },
  "key2": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key2",
    "text": "Charlie",
    "type": "unstyled",
  },
  "key3": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key3",
    "text": "Delta",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return first ContentBlock selected 1`] = `
{
  "key0": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "Alpha",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return last ContentBlock selected 1`] = `
{
  "key0": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "key0",
    "text": "Delta",
    "type": "unstyled",
  },
}
`;
